--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,12 @@
 [defaults]
+nocows			    = 1
 inventory                   = ./hosts
 retry_files_enabled         = false
 
 stdout_callback             = default
 bin_ansible_callbacks       = true
 callback_whitelist          = yaml, timer, profile_tasks
+collections_paths           = ./collections
 
 [ssh_connection]
 # ssh_args                    = -F ./ssh.cfg
