--- a/main.yml
+++ b/main.yml
@@ -1,46 +1,4 @@
-- name: Deploy, configure, and populate Postgres 12
-  hosts: database_servers
-  become: true
-  gather_facts: false
-  tags:
-    - database_servers
-  roles:
-    - role: firewall
-      vars:
-        firewall_services:
-          - postgresql
-
-    - role: postgresql
-
-- name: Deploy, configure, and populate flask repo and virtualenv
-  hosts: app_servers
-  become: true
-  gather_facts: false
-  tags:
-    - application_servers
-    - flask
-  roles:
-    - role: firewall
-      vars:
-        firewall_services:
-          - http
-        firewall_tcp_ports:
-          - 8080
-
-    - role: flask
-    
-- name: Deploy haproxy load balancer
-  hosts: load_balancers
-  gather_facts: false 
-  become: true
-  tags:
-    - load_balancers
-  roles:
-    - role: firewall
-      vars:
-        firewall_services:
-          - http
-        firewall_tcp_ports:
-          - 5000
-
-    - role: haproxy
+- import_playbook: subscription.yml
+- import_playbook: deploy-db.yml
+- import_playbook: deploy-apps.yml
+- import_playbook: deploy-loadbalancer.yml
