--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 nocows			    = 1
-inventory                   = ./hosts
+inventory                   = ./inventory
 retry_files_enabled         = false
 
 stdout_callback             = default
